@@ -1,6 +1,10 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_logio: new format-specifier %C (combined) which is the sum of received
+     and sent byte counts.
+     PR54015 [Christophe Jaillet]
+
   *) core: Remove apr_brigade_flatten(), buffering and duplicated code
      from the HTTP_IN filter, parse chunks in a single pass with zero copy.
      Reduce memory usage by 48 bytes per request. [Graham Leggett]
